Fixed spacing

--- a/home.css
+++ b/home.css
@@ -21,7 +21,7 @@ body {
 }
 
 .logo{
-    margin-block: 5rem;
+    margin-top: 5rem;
     width: 400px;
 }
 
